# obfutil

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.ru.md  main.py  obfuscator.py  pyproject.toml  setup.py
obfutil/: __init__.py  config.py
obfutil/core/: __init__.py  api.py
obfutil/crypto/: encryption.py  integrity.py
obfutil/obfuscation/: __init__.py  core.py
obfutil/ui/cli/: main.py
obfutil/utils/: file_utils.py  interface.py  localization.py  logger.py
obfutil/vault/: __init__.py  commands.py  container.py  manager.py
