[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obfutil"
version = "3.4"
description = "Advanced encryption and obfuscation tool with secure vaults"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ObfUtil Team", email = "arab.baraban@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Obfuscation",
]
dependencies = [
    "cryptography>=3.4",
    "astor>=0.8",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/fearvbs/obfutil"
Repository = "https://github.com/fearvbs/obfutil"
Issues = "https://github.com/fearvbs/obfutil/issues"
Changelog = "https://github.com/fearvbs/obfutil/blob/main/CHANGELOG.md"

[project.scripts]
obfutil = "obfutil.ui.cli.main:main"

[tool.setuptools]
packages = {find = {where = ["."], include = ["obfutil*"]}}
include-package-data = true

[tool.setuptools.package-data]
obfutil = [
    "*.py",
    "**/*.py",
]